[package]
name = "client"
version = "0.1.0"
authors = ["George Danezis <gdanezis@fb.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
tokio-util = { version = "0.6.2", features = ["codec"] }
clap = "2.33.3"
env_logger = "0.7.1"
log = "0.4.11"
bytes = "1.0.1"
bincode = "1.3.1"
anyhow = "1.0.40"
rand = "0.8"
futures = "0.3.15"
network = { path = "../network" }
smallbank = { path = "../smallbank" }

[[bin]]
name = "client"
path = "src/main.rs"

[workspace]
resolver = "2"

