[package]
name = "graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
bytes = "1.0.1"
petgraph = "0.6.4"
bincode = "1.3.3"

crypto = { path = "../crypto" }
smallbank = { path = "../smallbank" }
debugtimer = { path = "../debugtimer" }